--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -7,26 +7,27 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch: 
-    inputs: 
+  workflow_dispatch:
+    inputs:
       name:
         description: "cluster-name"
-        type: String
+        type: string
         required: true
         default: "GKE-cluster"
-      
 
 permissions: {}
 
 jobs:
   job1:
-    name: "job1"
+    name: job1
     runs-on: ubuntu-latest
     steps:
-      - run: echo "${{ inputs.cluster-name }}"
+      - name: Print cluster name
+        run: echo "${{ github.event.inputs.name || 'GKE-cluster' }}"
 
   job2:
     name: job2
     runs-on: windows-latest
     steps:
-      - run: echo "${{ inputs.cluster-name }}"
+      - name: Print cluster name
+        run: echo "${{ github.event.inputs.name || 'GKE-cluster' }}"
